tests/models/struct/unnamed/unit/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = null)]
   ()
);
fn main() {}
